--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -49,9 +49,9 @@
      <Compile Include="Assets\Scripts\Cloud.cs" />
      <Compile Include="Assets\Scripts\Ocean.cs" />
      <Compile Include="Assets\Scripts\PerlinNoise.cs" />
+     <Compile Include="Assets\Scripts\Plant.cs" />
      <Compile Include="Assets\Scripts\PlayerControl.cs" />
      <Compile Include="Assets\Scripts\Terrain.cs" />
-     <Compile Include="Assets\Scripts\Tree.cs" />
      <None Include="Assets\Shaders\TerrainShader.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
