Added: tree position updates with changes to terrain, trees self destruct upon submersion; Removed: cloud deformation, alternate tree materials; Fixed: cloud shader,  zoom feature now alters camera z position instead of field of view, changed cloud and surface object placement to a random angle method, terrain not updating mesh collider upon mutation;

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -48,11 +48,12 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Cloud.cs" />
      <Compile Include="Assets\Scripts\EnableDepthBuffer.cs" />
+     <Compile Include="Assets\Scripts\Land.cs" />
      <Compile Include="Assets\Scripts\Ocean.cs" />
      <Compile Include="Assets\Scripts\PerlinNoise.cs" />
      <Compile Include="Assets\Scripts\Plant.cs" />
      <Compile Include="Assets\Scripts\PlayerControl.cs" />
-     <Compile Include="Assets\Scripts\Terrain.cs" />
+     <Compile Include="Assets\Scripts\Topper.cs" />
      <None Include="Assets\Shaders\Cloud.shader" />
      <None Include="Assets\Shaders\Ocean.shader" />
      <None Include="Assets\Shaders\Terrain.shader" />
